# electronic_warefare_hackathon

./: .gitignore  European Defense Tech Hackathon – Munich 2025.pptx  README.md  README_helsing.md  cluster.py  cluster_emitters.py  cluster_eval.py  config.py  estimate_position.py  frequency_analysis.py  geometry.py  hello.py  kalman.py  kalman_lh.py  low_pass_filter.py  main.py  parse_data.py  plot_trajectories.py  pyproject.toml  test.py  test_geometry.py
