[project]
name = "electronic-warefare-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filterpy>=1.4.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
    "pyproj>=3.7.0",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
]
